prevent body overflow

--- a/resources/styles/common/global.scss
+++ b/resources/styles/common/global.scss
@@ -209,6 +209,6 @@ ul.wp-block-list > li {
 }
 
 .wp-block-media-text__media {
-  max-width: 60vw;
+  max-width: 50vw;
   margin: 1em 0;
 }
